Added correct support for long sum (safe and unsafe) Added support for string equality.